--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,69 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+@font-face {
+  font-family: 'Blinker Black';
+  src: url("../../public/assets/blinker/Blinker-Black.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker ExtraBold';
+  src: url("../../public/assets/blinker/Blinker-ExtraBold.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker Bold';
+  src: url("../../public/assets/blinker/Blinker-Bold.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker SemiBold';
+  src: url("../../public/assets/blinker/Blinker-SemiBold.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker Regular';
+  src: url("../../public/assets/blinker/Blinker-Regular.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker SemiLight';
+  src: url("../../public/assets/blinker/Blinker-SemiLight.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker Light';
+  src: url("../../public/assets/blinker/Blinker-Light.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker Thin';
+  src: url("../../public/assets/blinker/Blinker-Thin.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Blinker Headline';
+  src: url("../../public/assets/blinker/Blinker-Headline.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
 a {
   color: inherit;
   text-decoration: none;
