--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,3 +99,8 @@ a {
   text-decoration: underline  ;
   
 }
+
+:root { 
+  --poster-color: rgba(255, 255, 255, 0);
+  --progress-bar-color: "#ff0000"
+}
